# saddleback_cs_bot

./: README.md  pyproject.toml
discord_university/: __main__.py  add_roll.py
discord_university/bot/: __init__.py
discord_university/commands/: cmd_roll.py  cmd_version.py
discord_university/config/: __init__.py
discord_university/config/datamodel/: __init__.py  roll.py  root.py  secrets.py
tests/: test_discord_university.py
